clang/test/BSC/Negative/Ownership/Owned/owned_qualifier_non_pointer/owned_qualifier_non_pointer.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test that '_Owned' qualifier can only be applied to pointer types

struct S {
    int x;
};

// Define an _Owned struct to test the exception
_Owned struct OwnedS {
    int y;
};

// Define a template _Owned struct to test the exception
_Owned struct OwnedT<T> {
    T value;
};

void test_owned_non_pointer_types() {
    // These should trigger the error: '_Owned' qualifier on non-pointer primitive types
    int _Owned a;           // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    float _Owned b;         // expected-error {{type of 'float' cannot be qualified by '_Owned'}}
    double _Owned c;        // expected-error {{type of 'double' cannot be qualified by '_Owned'}}
    char _Owned d;          // expected-error {{type of 'char' cannot be qualified by '_Owned'}}
    long _Owned e;          // expected-error {{type of 'long' cannot be qualified by '_Owned'}}
    short _Owned f;         // expected-error {{type of 'short' cannot be qualified by '_Owned'}}
    struct S _Owned g;      // expected-error {{type of 'struct S' cannot be qualified by '_Owned'}}
}

void test_owned_valid_types() {
    // These are valid: '_Owned' qualifier on pointer types (no errors expected)
    int * _Owned p1;
    float * _Owned p2;
    double * _Owned p3;
    char * _Owned p4;
    struct S * _Owned p5;
    void * _Owned p6;

    // Using _Owned struct types directly (no explicit '_Owned' qualifier applied)
    OwnedS s1;
    OwnedS * _Owned s2;  // OK - pointer type

    // Using template _Owned struct types directly (no explicit '_Owned' qualifier applied)
    OwnedT<int> t1;
    OwnedT<int> * _Owned t2;  // OK - pointer type
}

// Test in struct member declarations
struct TestStruct {
    int _Owned member1;        // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int * _Owned member2;      // OK - pointer type
    OwnedS member3;           // OK - using _Owned struct type directly
    struct S * _Owned member4; // OK - pointer type
    OwnedT<int> member5;      // OK - using template _Owned struct type directly
};

// Test in function parameters
void test_function_params(
    int _Owned param1,         // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int * _Owned param2,       // OK - pointer type
    OwnedS param3,            // OK - using _Owned struct type directly
    struct S * _Owned param4,  // OK - pointer type
    OwnedT<int> param5        // OK - using template _Owned struct type directly
) {}

// Test in function return types
int _Owned test_return1() {    // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return 0;
}

int * _Owned test_return2() {  // OK - pointer type
    return 0;
}

OwnedS test_return3() {       // OK - using _Owned struct type directly
    OwnedS s;
    return s;
}

OwnedT<int> test_return4() {  // OK - using template _Owned struct type directly
    OwnedT<int> t;
    return t;
}

int *_Owned test_return5() {
    return 1; // expected-error {{incompatible _Owned types, cannot cast 'int' to 'int *_Owned'}}
}

_Safe int *_Owned test_return6(void) {
    return 1; // expected-error {{conversion from type 'int' to 'int *_Owned' is forbidden in the safe zone}}
}

_Safe int *_Owned _Nullable test_return7(void) {
    return (int *_Owned _Nullable)0; // expected-error {{incompatible _Owned types, cannot cast 'int' to 'int *_Owned'}}
}
